# Amazing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  config_example.txt  main.py  pyproject.toml  test.txt  todo.txt  txt
mazegen/: __init__.py  brutal_path.py  find_way.py  graphics.py  kruskal.py  maze.py  maze_checker.py  parse.py  vector2.py
source/: find_way.py  graphics.py  maze.py  maze_checker.py  parse.py  vector2.py  walker.py  walker_pa.py
tests/: parsing.py  validity.py
